--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   },
   "scripts": {
     "start": "cds-serve"
-  }
+  },
+  "cds": { "requires": {
+   "db": {
+      "kind": "sqlite",
+      "credentials": { "url": "db.sqlite" } 
+   }
+  }}
+
 }
