AFTER HANA DB DEPLOY

--- a/package.json
+++ b/package.json
@@ -6,21 +6,33 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@cap-js/hana": "^1",
     "@sap/cds": "^8",
     "express": "^4"
   },
   "devDependencies": {
-    "@cap-js/sqlite": "^1",
-    "@cap-js/cds-types": "^0.10.0"
+    "@cap-js/cds-types": "^0.10.0",
+    "@cap-js/sqlite": "^1"
   },
   "scripts": {
     "start": "cds-serve"
   },
-  "cds": { "requires": {
-   "db": {
-      "kind": "sqlite",
-      "credentials": { "url": "db.sqlite" } 
-   }
-  }}
-
+  "cds": {
+    "requires": {
+      "db": {
+        "kind": "sqlite",
+        "credentials": {
+          "url": "db.sqlite"
+        }
+      },
+      "[hybrid]": {
+        "db": {
+          "kind": "hana"
+        }
+      }
+    },
+    "sql": {
+      "native_hana_associations": false
+    }
+  }
 }
