--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "dependencies": {
     "@cap-js/hana": "^1",
     "@sap/cds": "^8",
-    "express": "^4"
+    "@sap/xssec": "^4",
+    "express": "^4",
+    "npm": "^11.3.0"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.10.0",
-    "@cap-js/sqlite": "^1"
+    "@cap-js/sqlite": "^1",
+    "@sap/cds-dk": "^8"
   },
   "scripts": {
     "start": "cds-serve"
@@ -25,11 +28,12 @@
           "url": "db.sqlite"
         }
       },
-      "[hybrid]": {
+      "[production]": {
         "db": {
           "kind": "hana"
         }
-      }
+      },
+      "auth": "xsuaa"
     },
     "sql": {
       "native_hana_associations": false
