--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
           "kind": "hana"
         }
       },
-      "auth": "xsuaa"
+      "auth": "mocked"
     },
     "sql": {
       "native_hana_associations": false
