--- a/mta.yaml
+++ b/mta.yaml
@@ -1,52 +1,105 @@
 _schema-version: 3.3.0
 ID: 01gettingStarted
+description: A simple CAP project.
 version: 1.0.0
-description: "A simple CAP project."
+modules:
+- name: 01gettingStarted-srv
+  type: nodejs
+  path: gen/srv
+  requires:
+  - name: 01gettingStarted-db
+  - name: 01gettingStarted-auth
+  provides:
+  - name: srv-api
+    properties:
+      srv-url: ${default-url}
+  parameters:
+    buildpack: nodejs_buildpack
+    instances: 1
+  build-parameters:
+    builder: npm-ci
+
+- name: 01gettingStarted-db-deployer
+  type: hdb
+  path: gen/db
+  requires:
+  - name: 01gettingStarted-db
+  parameters:
+    buildpack: nodejs_buildpack
+
+- name: 01gettingStarted-app-content
+  type: com.sap.application.content
+  path: .
+  requires:
+  - name: 01gettingStarted-repo-host
+    parameters:
+      content-target: true
+  build-parameters:
+    build-result: resources
+    requires:
+    - artifacts:
+      - comilyasgettingstarted.zip
+      name: comilyasgettingstarted
+      target-path: resources/
+
+- name: comilyasgettingstarted
+  type: html5
+  path: app/com.ilyas.gettingstarted
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
+    - npm install
+    - npm run build:cf
+    supported-platforms: []
+resources:
+- name: 01gettingStarted-db
+  type: com.sap.xs.hdi-container
+  parameters:
+    service: hana
+    service-plan: hdi-shared
+
+- name: 01gettingStarted-auth
+  type: org.cloudfoundry.managed-service
+  parameters:
+    config:
+      tenant-mode: dedicated
+      xsappname: 01gettingStarted-${org}-${space}
+    path: ./xs-security.json
+    service: xsuaa
+    service-plan: application
+
+- name: 01gettingStarted-repo-host
+  type: org.cloudfoundry.managed-service
+  parameters:
+    service: html5-apps-repo
+    service-name: 01gettingStarted-html5-service
+    service-plan: app-host
+    
+- name: 01gettingStarted-destination-service
+  type: org.cloudfoundry.managed-service
+  parameters:
+    config:
+      HTML5Runtime_enabled: false
+      init_data:
+        instance:
+          destinations:
+          - Authentication: NoAuthentication
+            Name: ui5
+            ProxyType: Internet
+            Type: HTTP
+            URL: https://ui5.sap.com
+          existing_destinations_policy: update
+      version: 1.0.0
+    service: destination
+    service-name: 01gettingStarted-destination-service
+    service-plan: lite
 parameters:
+  deploy_mode: html5-repo
   enable-parallel-deployments: true
 build-parameters:
   before-all:
-    - builder: custom
-      commands:
-        - npm i
-        - npx cds build --production
-modules:
-  - name: 01gettingStarted-srv
-    type: nodejs
-    path: gen/srv
-    parameters:
-      instances: 1
-      buildpack: nodejs_buildpack
-    build-parameters:
-      builder: npm-ci
-    provides:
-      - name: srv-api # required by consumers of CAP services (e.g. approuter)
-        properties:
-          srv-url: ${default-url}
-    requires:
-      - name: 01gettingStarted-db
-      - name: 01gettingStarted-auth
-
-  - name: 01gettingStarted-db-deployer
-    type: hdb
-    path: gen/db
-    parameters:
-      buildpack: nodejs_buildpack
-    requires:
-      - name: 01gettingStarted-db
-
-resources:
-  - name: 01gettingStarted-db
-    type: com.sap.xs.hdi-container
-    parameters:
-      service: hana
-      service-plan: hdi-shared
-  - name: 01gettingStarted-auth
-    type: org.cloudfoundry.managed-service
-    parameters:
-      service: xsuaa
-      service-plan: application
-      path: ./xs-security.json
-      config:
-        xsappname: 01gettingStarted-${org}-${space}
-        tenant-mode: dedicated
+  - builder: custom
+    commands:
+    - npm i
+    - npx cds build --production
