--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
   "devDependencies": {
     "@cap-js/cds-types": "^0.10.0",
     "@cap-js/sqlite": "^1",
-    "@sap/cds-dk": "^8"
+    "@sap/cds-dk": "^8",
+    "rimraf": "^5.0.5",
+    "mbt": "^1.2.29"
   },
   "scripts": {
-    "start": "cds-serve"
+    "start": "cds-serve",
+    "watch-com.ilyas.gettingstarted": "cds watch --open com.ilyas.gettingstarted/webapp/index.html?sap-ui-xx-viewCache=false",
+    "undeploy": "cf undeploy 01gettingStarted --delete-services --delete-service-keys --delete-service-brokers",
+    "build": "rimraf resources mta_archives && mbt build --mtar archive",
+    "deploy": "cf deploy mta_archives/archive.mtar --retries 1"
   },
   "cds": {
     "requires": {
@@ -38,5 +44,8 @@
     "sql": {
       "native_hana_associations": false
     }
-  }
+  },
+  "sapux": [
+    "app/com.ilyas.gettingstarted"
+  ]
 }
